<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_layout_login"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/polly">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_margin="15dp"
        android:background="@color/lightBlue"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top_logos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:tint="@color/offWhite"
                    android:onClick="onClickBackToLogin"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    android:contentDescription="@string/back_arrow" />

                <ImageView
                    android:id="@+id/camera_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/image_rounded"
                    android:contentDescription="@string/stock_image"
                    android:src="@android:drawable/ic_menu_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="13dp"
                    android:layout_toStartOf="@id/rectangle_confirm"
                    android:paddingTop="25dp"
                    android:text="CONFIRM"
                    android:textAlignment="center"
                    android:textColor="@color/offWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/rectangle_confirm"
                    android:layout_marginTop="20dp"
                    android:layout_width="10dp"
                    android:layout_height="30dp"
                    android:tint="@color/offWhite"
                    android:background="@color/offWhite"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/rect_content_descript"
                    android:shape="rectangle" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_container"
                android:layout_below="@id/top_logos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_container"
                android:layout_below="@id/username_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/zero_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_container"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_container"
                android:layout_below="@id/zero_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/first_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_container"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_space"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/is_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/is_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Male" />
            </RadioGroup>

            <Space
                android:id="@+id/second_space"
                android:layout_below="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_container"
                android:layout_below="@+id/second_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/third_space"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_below="@id/email_container"
                android:layout_marginTop="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_container"
                android:layout_below="@+id/third_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/fourth_space"
                android:layout_below="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_container"
                android:layout_below="@+id/fourth_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirm_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/phone_container"
                android:text="Confirm" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>